deploy: 144e4038fb50837d80def282a2b0584e041aa276

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     gtag('config', 'UA-1687066-2');
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous">
-  <link href="http://localhost:8000/css/site.css" rel="stylesheet">
-  <link rel="preload" href="http://localhost:8000/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link href="https://mac-vicar.eu/css/site.css" rel="stylesheet">
+  <link rel="preload" href="https://mac-vicar.eu/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
   
-<link href="http://localhost:8000/css/index.css" rel="stylesheet">
+<link href="https://mac-vicar.eu/css/index.css" rel="stylesheet">
 
 </head>
 <body>
@@ -34,7 +34,7 @@
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
         <i class="fa-brands fa-twitter"></i>
       </a>
-      <a title="RSS feed" id="atom" href="posts/rss.xml">
+      <a title="RSS feed" id="atom" href="https://mac-vicar.eu/posts/rss.xml">
         <i class="fa-solid fa-rss"></i>
       </a>
     </div>
@@ -49,36 +49,36 @@
 <li>
   <span class="timestamp">18 Dec 2024</span>
  -
-  <a href="http://localhost:8000//posts/2024-12-18-the-aero/">The Aero: restoring a Compaq Contura Aero 4/33C</a>
+  <a href="https://mac-vicar.eu//posts/2024-12-18-the-aero/">The Aero: restoring a Compaq Contura Aero 4/33C</a>
 </li>
 
 <li>
   <span class="timestamp">19 Jan 2023</span>
  -
-  <a href="http://localhost:8000//posts/2023-01-19-personal-picks/">2022 picks: software projects to keep an eye on</a>
+  <a href="https://mac-vicar.eu//posts/2023-01-19-personal-picks/">2022 picks: software projects to keep an eye on</a>
 </li>
 
 <li>
   <span class="timestamp">20 Oct 2020</span>
  -
-  <a href="http://localhost:8000//posts/2020-10-20-migrating-away-google-services/">Migrating away from Google services</a>
+  <a href="https://mac-vicar.eu//posts/2020-10-20-migrating-away-google-services/">Migrating away from Google services</a>
 </li>
 
 <li>
   <span class="timestamp">14 Sep 2020</span>
  -
-  <a href="http://localhost:8000//posts/2020-09-14-prose-linting-vale-emacs/">Prose linting with Vale and Emacs</a>
+  <a href="https://mac-vicar.eu//posts/2020-09-14-prose-linting-vale-emacs/">Prose linting with Vale and Emacs</a>
 </li>
 
 <li>
   <span class="timestamp">07 Sep 2020</span>
  -
-  <a href="http://localhost:8000//posts/2020-09-07-k3s-on-rpi-with-salt/">Raspberry Pi cluster with k3s &amp; Salt (Part 1)</a>
+  <a href="https://mac-vicar.eu//posts/2020-09-07-k3s-on-rpi-with-salt/">Raspberry Pi cluster with k3s &amp; Salt (Part 1)</a>
 </li>
 
 </ul>
 
-Full list at my <a href="http://localhost:8000//posts/">my Blog</a>.
+Full list at my <a href="https://mac-vicar.eu//posts/">my Blog</a>.
 
 </section>
 
@@ -124,6 +124,6 @@ Full list at my <a href="http://localhost:8000//posts/">my Blog</a>.
  
  <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> undefined (<a href="https://orgmode.org/">Org</a> mode undefined). <a href="http://localhost:8000/readme.html">Details</a>.</p>
+  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org/">Org</a> mode 9.4.4). <a href="https://mac-vicar.eu/readme.html">Details</a>.</p>
 </body>
 </html>
