--- a/readme.html
+++ b/readme.html
@@ -11,8 +11,8 @@
     gtag('config', 'UA-1687066-2');
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous">
-  <link href="http://localhost:8000/css/site.css" rel="stylesheet">
-  <link rel="preload" href="http://localhost:8000/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link href="https://mac-vicar.eu/css/site.css" rel="stylesheet">
+  <link rel="preload" href="https://mac-vicar.eu/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
   
 </head>
 <body>
@@ -32,7 +32,7 @@
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
         <i class="fa-brands fa-twitter"></i>
       </a>
-      <a title="RSS feed" id="atom" href="posts/rss.xml">
+      <a title="RSS feed" id="atom" href="https://mac-vicar.eu/posts/rss.xml">
         <i class="fa-solid fa-rss"></i>
       </a>
     </div>
@@ -43,7 +43,7 @@
 <h1>My homepage with org-mode</h1>
 <div class="content">
   
-<figure id="org7d39fa4">
+<figure id="org9bea6bb">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
@@ -91,6 +91,6 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
  
  <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> undefined (<a href="https://orgmode.org/">Org</a> mode undefined). <a href="http://localhost:8000/readme.html">Details</a>.</p>
+  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org/">Org</a> mode 9.4.4). <a href="https://mac-vicar.eu/readme.html">Details</a>.</p>
 </body>
 </html>
