--- a/software.html
+++ b/software.html
@@ -11,8 +11,8 @@
     gtag('config', 'UA-1687066-2');
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous">
-  <link href="http://localhost:8000/css/site.css" rel="stylesheet">
-  <link rel="preload" href="http://localhost:8000/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link href="https://mac-vicar.eu/css/site.css" rel="stylesheet">
+  <link rel="preload" href="https://mac-vicar.eu/fonts/blockzone-webfont.woff2" as="font" type="font/woff2" crossorigin>
   
 </head>
 <body>
@@ -32,7 +32,7 @@
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
         <i class="fa-brands fa-twitter"></i>
       </a>
-      <a title="RSS feed" id="atom" href="posts/rss.xml">
+      <a title="RSS feed" id="atom" href="https://mac-vicar.eu/posts/rss.xml">
         <i class="fa-solid fa-rss"></i>
       </a>
     </div>
@@ -173,6 +173,6 @@ while keeping things working.</li>
  
  <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> undefined (<a href="https://orgmode.org/">Org</a> mode undefined). <a href="http://localhost:8000/readme.html">Details</a>.</p>
+  <p>Last updated 06 Jan 2025. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org/">Org</a> mode 9.4.4). <a href="https://mac-vicar.eu/readme.html">Details</a>.</p>
 </body>
 </html>
