--- a/tutorials/rpm-packaging/index.html
+++ b/tutorials/rpm-packaging/index.html
@@ -212,7 +212,7 @@ Lets start with a famous UNIX tool: <code>rsync</code>.
 So a package is an archive file:
 </p>
 
-<pre class="example" id="org3f36343">
+<pre class="example" id="orgaa4a37f">
 rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -220,7 +220,7 @@ rsync-3.1.2-1.5.x86_64.rpm
 containing all files related to the application:
 </p>
 
-<pre class="example" id="orgfe451b9">
+<pre class="example" id="orgf3692de">
 $ rpm -qpl rsync-3.1.2-1.5.x86_64.rpm
 
 /etc/logrotate.d/rsync
@@ -251,7 +251,7 @@ to:
 <li><code>Name</code>, <code>Summary</code>, <code>Description</code>, <code>License</code>, etc.</li>
 </ul>
 
-<pre class="example" id="org6609a94">
+<pre class="example" id="org82b0c22">
 $ rpm -qpi rsync-3.1.2-1.5.x86_64.rpm
 
 Name        : rsync
@@ -288,7 +288,7 @@ Distribution: openSUSE Tumbleweed
 (<code>Requires</code>)</li>
 </ul>
 
-<pre class="example" id="org7a2253c">
+<pre class="example" id="orgcefb6d7">
 $ rpm -qp --requires rsync-3.1.2-1.5.x86_64.rpm
 /bin/sh
 /usr/bin/perl
@@ -329,7 +329,7 @@ called during runtime.
 <li>What does the package provide for other packages to work (<code>Provides</code>)</li>
 </ul>
 
-<pre class="example" id="orgb6d6d39">
+<pre class="example" id="orgdeb22cb">
 $ rpm -qp --provides rsync-3.1.2-1.5.x86_64.rpm
 config(rsync) = 3.1.2-1.5
 rsync = 3.1.2-1.5
@@ -358,7 +358,7 @@ level.
 Packages can be installed with the <code>rpm</code> tools:
 </p>
 
-<pre class="example" id="org0b2efcd">
+<pre class="example" id="orgf45f5d4">
 $ rpm -U rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -369,7 +369,7 @@ the <code>-p</code> option and use what is called the NVRA
 subset of it, e.g. just name (<code>rsync</code>).
 </p>
 
-<pre class="example" id="orgf42a49a">
+<pre class="example" id="orgce2927d">
 $ rpm -q --provides rsync
 </pre>
 
@@ -435,7 +435,7 @@ build system scanned the executable <code>/usr/lib/rsync</code> and realized it 
 linked against <code>libc.so.6</code>:
 </p>
 
-<pre class="example" id="orga3c31dc">
+<pre class="example" id="orgb55aef5">
 $ ldd /usr/bin/rsync
         linux-vdso.so.1 (0x00007ffccb34a000)
         libacl.so.1 =&gt; /lib64/libacl.so.1 (0x00007fc406028000)
@@ -464,7 +464,7 @@ only <code>Requires: libsound</code> (as in package name). Then when he/she trie
 to run it:
 </p>
 
-<pre class="example" id="org91c5d57">
+<pre class="example" id="org5f28a7e">
 $ musicplayer
 error while loading shared libraries: libsound.so.7: cannot open shared object file: No such file or directory
 </pre>
@@ -575,7 +575,7 @@ includes a command-line tool called <code>zypper</code>. While tools like
 console you will likely interact with <code>zypper</code>.
 </p>
 
-<pre class="example" id="org4a3b7de">
+<pre class="example" id="org0d8b110">
 $ zypper install rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -618,7 +618,7 @@ package, and then rpm files are retrieved on demand at installation
 time.
 </p>
 
-<pre class="example" id="org92f8887">
+<pre class="example" id="org23aef39">
 $ zypper lr
 
 # | Alias          | Name           | Enabled | GPG Check | Refresh
@@ -680,7 +680,7 @@ rpm files into its cache.
 <div id="outline-container-refreshing-a-repository" class="outline-4">
 <h4 id="refreshing-a-repository">Refreshing a repository</h4>
 <div class="outline-text-4" id="text-refreshing-a-repository">
-<pre class="example" id="org26cbfb1">
+<pre class="example" id="orgc20a09f">
 $ zypper ref
 </pre>
 
@@ -812,7 +812,7 @@ Patterns are used to install a collection of software in a comfortable
 way. For example you can install a working Laptop-oriented system with:
 </p>
 
-<pre class="example" id="org32b9fd0">
+<pre class="example" id="orgb89f7c2">
 $ zypper install -t pattern laptop
 </pre>
 
@@ -841,7 +841,7 @@ of the magic behind patterns (equivalent to
 Similar to patterns, products can be queried with:
 </p>
 
-<pre class="example" id="org8d0d092">
+<pre class="example" id="orgc32cc5a">
 $ zypper search -t product
 </pre>
 
@@ -884,7 +884,7 @@ package manager will dynamically read <code>/sys/devices</code> and make this
 entity have provides like:
 </p>
 
-<pre class="example" id="org7caf775">
+<pre class="example" id="orgd96ca57">
 Provides :modalias(pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 </pre>
 
@@ -893,7 +893,7 @@ Then, a package providing a WLAN driver for some cards (e.g.
 <code>wlan-kmp-default</code>), could have the following dependencies:
 </p>
 
-<pre class="example" id="org771e709">
+<pre class="example" id="orgc7fa626">
 Supplements: modalias(kernel-default:pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v0000104Cd00009066sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v000010B7d00006000sv*sd*bc*sc*i*)
@@ -942,7 +942,7 @@ injected as we already mentioned), and how the content of the package is
 created. A very simple spec file would be:
 </p>
 
-<pre class="example" id="org23eddd4">
+<pre class="example" id="org011223f">
 Name:           mypackage
 Version:        1.0
 Release:        0
@@ -990,7 +990,7 @@ like <code>%{_prefix}</code>, <code>%{_datadir}</code>, <code>%{_mandir}</code>,
 <code>%{_bindir}</code>, etc. You can evaluate a macro like this:
 </p>
 
-<pre class="example" id="orge81073b">
+<pre class="example" id="orgb334717">
 $ rpm --eval "%{_libdir}"
 /usr/lib64
 </pre>
@@ -1043,7 +1043,7 @@ file to be in a specific location, so I usually tweak the standard
 configuration so that spec files are searched in the current directory:
 </p>
 
-<pre class="example" id="orga8e85f8">
+<pre class="example" id="orge1bb7c2">
 $ cat ~/.rpmmacros
 %topdir /space/packages
 %_builddir %{topdir}/build
@@ -1062,7 +1062,7 @@ As you can see, I also configure it so that built packages are saved in
 Once I have this setup, I can do:
 </p>
 
-<pre class="example" id="orged37d14">
+<pre class="example" id="org255b202">
 $ rpmbuild -bb mypackage.spec
 Executing(%install): /bin/sh -e /var/tmp/rpm-tmp.lVzwnj
 + umask 022
@@ -1087,7 +1087,7 @@ Executing(%clean): /bin/sh -e /var/tmp/rpm-tmp.0xLGri
 Now I can verify the content of the package:
 </p>
 
-<pre class="example" id="org20a3766">
+<pre class="example" id="orge63f8df">
 % rpm -qpl /space/packages/rpms/x86_64/mypackage-1.0-0.x86_64.rpm
 /usr/share/mypackage/CONTENT
 </pre>
@@ -1147,7 +1147,7 @@ On the other hand, the original <code>oracle-instantclient-sqlplus</code> packag
 is required at runtime, but we don&rsquo;t need it to build our package.
 </p>
 
-<pre class="example" id="org06f0f39">
+<pre class="example" id="org2bb6310">
 Name:           gqlplus
 Version:        1.15
 Release:        0
@@ -1215,7 +1215,7 @@ installed by the -devel packages, it will be scanned and the right
 <code>Requires</code> injected:
 </p>
 
-<pre class="example" id="orga840200">
+<pre class="example" id="org63d067b">
 $ rpm -qp --requires gqlplus-1.15-0.x86_64.rpm
 libc.so.6()(64bit)
 ...
@@ -1230,7 +1230,7 @@ These symbols are provided by the right package, so the solver will
 match them:
 </p>
 
-<pre class="example" id="orge367eef">
+<pre class="example" id="org6b6b7ef">
 rpm -q --whatprovides 'libncurses.so.6()(64bit)'
 libncurses6-6.0-19.1.x86_64
 </pre>
@@ -1301,7 +1301,7 @@ right order and re-published.
 </p>
 
 
-<figure id="org9f4bb5d">
+<figure id="org04a1cf0">
 <img src="images/gqlplus-obs.png" alt="gqlplus-obs.png">
 
 </figure>
@@ -1325,7 +1325,7 @@ With the <code>osc</code> tool you can checkout packages from OBS, make changes 
 resubmit them.
 </p>
 
-<pre class="example" id="org9ff975d">
+<pre class="example" id="orgc92e9f5">
 $ osc co home:dmacvicar gqlplus
 A    home:dmacvicar
 A    home:dmacvicar/gqlplus
@@ -1345,7 +1345,7 @@ machine), setting up that environment automatically using the
 a different distribution than the one you are running.
 </p>
 
-<pre class="example" id="org81a89a8">
+<pre class="example" id="org27a7e86">
 $ cd home:dmacvicar/gqlplus
 $ osc build openSUSE_Leap_42.2
 ...
@@ -1374,7 +1374,7 @@ sources by hundreds of contributors.
 The <code>spec-cleaner</code> tool can help you keeping your spec file in shape:
 </p>
 
-<pre class="example" id="orgf365e21">
+<pre class="example" id="org4ee7271">
 $ spec-cleaner -i gqlplus.spec
 </pre>
 
@@ -1426,7 +1426,7 @@ developed. It is easy to find the devel project using the <code>develproject</co
 (<code>dp</code>) command:
 </p>
 
-<pre class="example" id="org3077d06">
+<pre class="example" id="org15728a9">
 $ osc dp openSUSE:Factory rsync
 network
 </pre>
@@ -1436,7 +1436,7 @@ Create a branch and a local checkout of the package using the <code>branch</code
 command:
 </p>
 
-<pre class="example" id="org1ceba74">
+<pre class="example" id="org0075dd0">
 $ osc bco network rsync
 A    home:dmacvicar:branches:network
 A    home:dmacvicar:branches:network/rsync
@@ -1467,7 +1467,7 @@ into the devel project. To do this, use the <code>submitrequest</code> (<code>sr
 command:
 </p>
 
-<pre class="example" id="org54a8953">
+<pre class="example" id="orgd03c196">
 $ osc sr
 </pre>
 
