deploy: a1f10cdfc6cfc8150891fca9ef3b4e6ff327a9e6

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
       <a href="/"><h2>Duncan Mac-Vicar P.</h2></a>
       <div id="social">
         <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
-        <i class="fa-brands fa-github"></i>
-      </a>
+          <i id="github-icon" class="fa-brands fa-github"></i>
+	</a>
       <a title="dmacvicar on Hacker News" href="https://news.ycombinator.com/user?id=dmacvicar">
-        <i class="fa-brands fa-hacker-news"></i>
+        <i id="hacker-news-icon" class="fa-brands fa-hacker-news"></i>
       </a>
-      <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
-        <i class="fa-brands fa-twitter"></i>
+      <a title="dmacvicar on Bluesky" href="https://bsky.app/profile/duncan.mac-vicar.eu">
+        <i id="bluesky-icon" class="fa-brands fa-bluesky"></i>
       </a>
       <a title="RSS feed" id="atom" href="https://mac-vicar.eu/posts/rss.xml">
-        <i class="fa-solid fa-rss"></i>
+        <i id="rss-icon" class="fa-solid fa-rss"></i>
       </a>
     </div>
    <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar <i class="fa-solid fa-guitar"></i> ...</sub>
