--- a/readme.html
+++ b/readme.html
@@ -24,16 +24,16 @@
       <a href="/"><h2>Duncan Mac-Vicar P.</h2></a>
       <div id="social">
         <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
-        <i class="fa-brands fa-github"></i>
-      </a>
+          <i id="github-icon" class="fa-brands fa-github"></i>
+	</a>
       <a title="dmacvicar on Hacker News" href="https://news.ycombinator.com/user?id=dmacvicar">
-        <i class="fa-brands fa-hacker-news"></i>
+        <i id="hacker-news-icon" class="fa-brands fa-hacker-news"></i>
       </a>
-      <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
-        <i class="fa-brands fa-twitter"></i>
+      <a title="dmacvicar on Bluesky" href="https://bsky.app/profile/duncan.mac-vicar.eu">
+        <i id="bluesky-icon" class="fa-brands fa-bluesky"></i>
       </a>
       <a title="RSS feed" id="atom" href="https://mac-vicar.eu/posts/rss.xml">
-        <i class="fa-solid fa-rss"></i>
+        <i id="rss-icon" class="fa-solid fa-rss"></i>
       </a>
     </div>
    <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar <i class="fa-solid fa-guitar"></i> ...</sub>
@@ -43,7 +43,7 @@
 <h1>My homepage with org-mode</h1>
 <div class="content">
   
-<figure id="org9bea6bb">
+<figure id="orgd11614d">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><object type="image/svg+xml" data="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" class="org-svg">
 Sorry, your browser does not support SVG.</object></a>
 
